--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>{{ page.title }}</title>
   <meta name="author" content="The Proficient Engineer" />
-  <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM" />
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
 
   <!-- syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -16,16 +17,9 @@
 
 <body>
 
-  <!-- ClickTale Top part -->
-  <script type="text/javascript">
-    var WRInitTime = (new Date()).getTime();
-  </script>
-  <!-- ClickTale end of Top part -->
-
   <div class="site">
     <div class="title">
       <a href="/">The Proficient Engineer</a>
-      <a class="extra" href="/">home</a>
     </div>
 
     {{ content }}
@@ -38,7 +32,7 @@
       </div>
       <div class="contact">
         <p>
-          <a href="http://github.com/svamipillai/">github.com/svsamipillai</a>
+          <a href="https://github.com/svsamipillai/">github.com/svsamipillai</a>
           <br />
         </p>
       </div>
